# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.482 2005/12/21 06:32:09 rocket Exp $

  21 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
  Remove requirement on md5sum,sha1sum,crc32 .. only need to have shash
  installed. Supports all of shashs algorithms as of 12_21_2005

  20 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Catalyst should die if source_subpath is not a string

  20 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix for source_subpath bug

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec:
  Updated example specs with information on cflags/chost/cxxflags/ldflags in
  both stages 1 and 2.

  20 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
  modules/stage2_target.py:
  Disable reading of CHOST/CFLAGS/CXXFLAGS/LDFLAGS from the environment. Allow
  stage1 to be overridden again.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  It looks like gcc-config/binutils-config needs to be run with the full path,
  since it is run outside of the chroot.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-controller.sh:
  Fixed gcc-config calls.  This is 2.0_rc11.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc10.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py:
  Updated sh support from Mike Frysinger <vapier@gentoo.org> and closing bug
  #115866.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Changed from -z to -n for bug #116180.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py: